# tokenizers

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  benchmark.py  cgo_go122.go  deps.bzl  go.mod  go.sum  tokenizer.go  tokenizer_integration_test.go  tokenizer_test.go  tokenizers.h
.github/: dependabot.yml
.github/workflows/: ci.yaml  lint.yaml  pages.yml  release-cut.yml  release.yml  security.yml  sercurity.yml  test.yaml
bazel/: BUILD.bazel  wasm_cc_toolchain.bzl
benches/: decode_benchmark.rs
benchmarks/: comparison.txt  v0.20.2-baseline.txt  v0.22.0-updated.txt
crates/: BUILD.bazel
crates/tokenizers/: BUILD.bazel  Cargo.toml
crates/tokenizers-wasm/: BUILD.bazel  Cargo.toml
crates/tokenizers-wasm/src/: lib.rs
crates/tokenizers/benches/: decode_benchmark.rs
crates/tokenizers/src/: lib.rs
cross/: musl-aarch64.Dockerfile  musl-x86_64.Dockerfile
docs/: index.html
example/: BUILD.bazel  Dockerfile  README.md  go.mod  go.sum  main.go
examples/go/: BUILD.bazel  README.md  go.mod  main.go
examples/web/: README.md  index.html
fixtures/: test_embeddings.jsonl
lib/: .gitignore  Cargo.toml  tokenizer.h  tokenizers.h
lib/src/: lib.rs
lib/tokenizer/: Cargo.toml
lib/tokenizer/src/: lib.rs
lib/tokenizers/src/: lib.rs
release/: BUILD.bazel  Dockerfile  go.mod  go.sum  main.go
scripts/: release_bump.sh
src/: chat_template.rs  chat_template_ffi.rs  lib.rs
test/: BUILD.bazel
test/benchmark/: go_results.txt  rust_results.txt
test/data/: all-minilm-l6-v2.json  bert-base-uncased-padding.json  bert-base-uncased.json  cohere-tokenizer.json  long_text.txt  sentence-transformers-labse.json
test/data/Qwen/Qwen3-235B-A22B-Instruct-2507/: tokenizer_config.json
test/data/kimi-k2-instruct/: tokenizer_config.json
test/data/meta-llama-3-8b-instruct/: tokenizer_config.json
