load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_rust//rust:defs.bzl", "rust_static_library")

# gazelle:exclude release
# gazelle:prefix github.com/daulet/tokenizers
gazelle(
    name = "gazelle",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

rust_static_library(
    name = "tokenizers_rs",
    srcs = glob([
        "crates/tokenizers/src/**/*.rs",
    ]),
    version = "1.23.0",
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(),
)

go_test(
    name = "tokenizers_test",
    srcs = ["tokenizer_test.go"],
    data = ["//test:data"],
    embedsrcs = ["//test:embeddata"],
    deps = [
        ":tokenizers",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_library(
    name = "tokenizers",
    srcs = [
        "tokenizer.go",
        "tokenizers.h",
    ],
    cdeps = [
        ":tokenizers_rs",
    ],
    cgo = True,
    importpath = "github.com/daulet/tokenizers",
    visibility = ["//visibility:public"],
)
