[workspace]
resolver = "2"
members = [
    "crates/tokenizers",
    "crates/tokenizers-wasm",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/daulet/tokenizers"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
