module(
    name = "com_github_daulet_tokenizers",
    version = "1.23.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "1.24.2")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "rules_cc", version = "0.2.14")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
use_repo(go_deps, "com_github_stretchr_testify")
go_deps.from_file(go_mod = "//:go.mod")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    extra_target_triples = ["wasm32-unknown-unknown"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crate_index",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/tokenizers:Cargo.toml",
    ],
)
crate.from_cargo(
    name = "crate_index_wasm",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/tokenizers-wasm:Cargo.toml",
    ],
)

# Disable native build scripts for WASM-incompatible crates
crate.annotation(
    crate = "esaxx-rs",
    repositories = ["crate_index_wasm"],
    gen_build_script = "off",
)
crate.annotation(
    crate = "onig_sys",
    repositories = ["crate_index_wasm"],
    gen_build_script = "off",
)
crate.annotation(
    crate = "onig",
    repositories = ["crate_index_wasm"],
    gen_build_script = "off",
)

# Configure getrandom for WASM
crate.annotation(
    crate = "getrandom",
    repositories = ["crate_index_wasm"],
    rustc_flags = ["--cfg=getrandom_backend=\"wasm_js\""],
)
use_repo(crate, "crate_index", "crate_index_wasm")

# Register stub CC toolchain for WASM targets
register_toolchains("//bazel:wasm_cc_toolchain_def")
