load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load(":wasm_cc_toolchain.bzl", "wasm_cc_toolchain_config")

# Stub CC toolchain config for WASM
wasm_cc_toolchain_config(
    name = "wasm_cc_toolchain_config",
)

# Stub CC toolchain for WASM - provides empty toolchain for WASM targets
cc_toolchain(
    name = "wasm_cc_toolchain",
    all_files = ":empty",
    compiler_files = ":empty",
    dwp_files = ":empty",
    linker_files = ":empty",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = False,
    toolchain_config = ":wasm_cc_toolchain_config",
)

filegroup(
    name = "empty",
    srcs = [],
)

toolchain(
    name = "wasm_cc_toolchain_def",
    exec_compatible_with = [
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:wasm32",
    ],
    toolchain = ":wasm_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
