[package]
name = "tokenizers" 
version = "0.9.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.147"
# not a direct dependency, but necessary for cross compilation
openssl = { version = "0.10.50", features = ["vendored"] }
tokenizers = "0.14.0"

[registries.crates-io]
# speed up "Updating crates.io index"
protocol = "sparse"
