load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "release_lib",
    srcs = ["main.go"],
    importpath = "github.com/daulet/tokenizers/release",
    visibility = ["//visibility:private"],
    deps = ["//:tokenizers_go"],
)

go_binary(
    name = "release",
    data = ["//test:data"],
    embed = [":release_lib"],
    visibility = ["//visibility:public"],
)
