[package]
name = "tokenizers-wasm"
version = "0.1.0"
edition.workspace = true
description = "WebAssembly bindings for the tokenizers library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys = "0.3"
tokenizers = { version = "0.22", default-features = false, features = ["unstable_wasm"] }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]
