load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_static_library")

rust_static_library(
    name = "tokenizers_rs",
    srcs = glob([
        "src/**/*.rs",
    ]),
    version = "1.26.0",
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(),
)
